--- a/.github/workflows/ml_ci_cd.yml
+++ b/.github/workflows/ml_ci_cd.yml
@@ -1,15 +1,27 @@
 name: Modelops-deploy
 on:
+  workflow_dispatch:
+    inputs:
+      codeurl:
+        description: "URL of the code"
+        required: true
+        default: ""
+      MODEL_NAME:
+        description: "Name of the model"
+        required: true
+        default: ""
+
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
   repository_dispatch:
     types: [ml_ci_cd]
+
 jobs:
   ml_ci_cd:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: python version
-      run: python --version
+      - uses: actions/checkout@v2
+      - name: python version
+        run: python --version
