--- a/.github/workflows/ml_ci_cd.yml
+++ b/.github/workflows/ml_ci_cd.yml
@@ -33,4 +33,9 @@ jobs:
         run: pip install -r requirements.txt
       - name: train model
         run: python model/train.py
+      - name: docker build
+        run: docker build -t ${{secrets.DOCKER_USER}}/${{secrets.MODEL_NAME}}:${{github.sha}} .
+      - name: show images
+        run: docker images
+
 
