--- a/.github/workflows/ml_ci_cd.yml
+++ b/.github/workflows/ml_ci_cd.yml
@@ -42,6 +42,10 @@ jobs:
           DOCKER_USER: ${{secrets.DOCKER_USER}}
           DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
         run: echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin 
+      - name: Configure Docker credential helper
+        run: |
+          mkdir -p ~/.docker
+          echo '{"credsStore": "pass"}' > ~/.docker/config.json
       - name: docker Push
         run: docker push ${{secrets.DOCKER_USER}}/${{secrets.MODEL_NAME}}:${{ github.sha }}
 
