--- a/.github/workflows/ml_ci_cd.yml
+++ b/.github/workflows/ml_ci_cd.yml
@@ -38,7 +38,7 @@ jobs:
       - name: train model
         run: python model/train.py
       - name: docker build
-        run: docker build -t ${{secrets.DOCKER_USER}}/${{secrets.MODEL_NAME}}:${{github.sha}} .
+        run: docker build -t ${{secrets.DOCKER_USER}}/${{secrets.MODEL_NAME}}:${{github.event.client_payload.sha}} .
       - name: show images
         run: docker images
       - name: docker login
@@ -48,7 +48,7 @@ jobs:
         run: echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin 
     
       - name: docker Push
-        run: docker push ${{secrets.DOCKER_USER}}/${{secrets.MODEL_NAME}}:${{ github.sha }}
+        run: docker push ${{secrets.DOCKER_USER}}/${{secrets.MODEL_NAME}}:${{ github.event.client_payload.sha }}
 
 
 
