--- a/.github/workflows/ml_ci_cd.yml
+++ b/.github/workflows/ml_ci_cd.yml
@@ -36,7 +36,9 @@ jobs:
       - name: cat dataset
         run: cat data/heart_disease.csv
       - name: train model
-        run: python model/train.py
+        run: |
+            cd model
+            python train.py
       - name: docker build
         run: docker build -t ${{secrets.DOCKER_USER}}/${{secrets.MODEL_NAME}}:${{github.event.client_payload.sha}} .
       - name: show images
